# choose

./: .clang-format  CMakeLists.txt  LICENSE.txt  Makefile  TODO.txt  choose.cpp  choose_injector.cpp  fzf.md  perf.md  readme.md  temp.sh
.github/workflows/: cpp-linter.yml  oss-fuzz.yml  tests.yml
fuzz/: .gitignore  README.md  llvm_gcov.sh  main.cpp  makefile
perf/: gen_perf_stats.bash  perf.md
scripts/: choose.bash  choose_injector.cpp  choose_injector_wrapper.bash  hist_installer.bash  install.bash  install.sh  uninstall.bash  uninstall.sh
src/: algo_utils.hpp  args.hpp  choose.cpp  main.cpp  ncurses_wrapper.hpp  numeric_utils.hpp  ordered_op.hpp  pipeline.hpp  regex.hpp  string_utils.hpp  termination_request.hpp  test.cpp  token.hpp  token_common.hpp  token_stream.hpp  uniqueness_utils.hpp
src/args/: args.cpp  args.hpp
src/args/uncompiled/: uncompiled_args.hpp
src/pipeline/: head.hpp  index.hpp  packet.hpp  replace.hpp  reverse.hpp  rm_or_filter.hpp  sort.hpp  substitute.hpp  tail.hpp  terminal.hpp  token_output_stream.hpp  unique.hpp  unit.hpp  user_defined_sort.hpp
src/pipeline/packet/: packet.hpp  token.hpp
src/pipeline/unit/: accumulator.hpp  head.hpp  index.hpp  replace.hpp  reverse.hpp  rm_or_filter.hpp  sort.hpp  substitute.hpp  tail.hpp  terminal.hpp  token_output_stream.hpp  unique.hpp  unit.hpp  user_defined_sort.hpp
src/tui/: tui.hpp
src/utils/: regex.hpp  string_utils.hpp
